# FreeTypeTest

./: .gitignore  CMakeLists.txt  GameConstants.h  GameValues.h  Text.cpp  Text.h  TextRenderer.cpp  TextRenderer.h  glad.c  main.cpp  shader.h  stb_image.h
Dependencies/Include/: ft2build.h
Dependencies/Include/GLFW/: glfw3.h
Dependencies/Include/glad/: glad.h
Dependencies/Include/glm/gtc/: matrix_transform.hpp  matrix_transform.inl
Dependencies/Lib/: glfw3.lib
Sprites/: BackgroundLayer.cpp  BackgroundLayer.h  Fish.cpp  Fish.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  Trash.cpp  Trash.h  WaterElement.cpp  WaterElement.h
shaders/: ColoredTriangle.frag  HelloTriangle.frag  HelloTriangle.vert  animatedTexture.frag  backgroundTexture.vert  texture.frag  texture.vert
